Use file paths instead of file URLs as relative paths for file URLs are not supported
git-svn-id: https://svn.apache.org/repos/asf/tuscany/java/sca@788492 13f79535-47bb-0310-9956-ffa450edef68